--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body style="background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.729), rgba(244, 243, 243, 0.69)), url(/images/bg.png); height: auto; background-position: center center; background-repeat: no-repeat; background-attachment: fixed; background-size: cover; background-color: #F8FAFD;">
+<body 
+style="background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.729), rgba(244, 243, 243, 0.69)), url(/images/bg.png);height: auto; 
+background-position: center center; 
+background-repeat: no-repeat; 
+background-attachment: fixed; 
+background-size: cover; 
+background-color: #F8FAFD;">
   <app-root></app-root>
 </body>
 </html>
